add languages and game edition names in various languages. additionally refactor the game edition id to an int. adjust api and dtos and frontend integration.
